# doku

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: README.md
agents/main/: config.toml
agents/subagents/call_chain_analyzer/: config.toml  models.py  prompt.md
agents/subagents/decision_flow_analyzer/: config.toml  models.py  prompt.md
agents/subagents/entrypoint_documenter/: config.toml  models.py  prompt.md
agents/subagents/external_dependency_analyzer/: config.toml  models.py  prompt.md
agents/subagents/feature_toggle_analyzer/: config.toml  models.py  prompt.md
agents/subagents/kafka_consumer_extractor/: models.py  prompt.md
agents/subagents/soap_api_extractor/: prompt.md
src/doku/: __init__.py  agent.py  agent_cli.py  agent_config.py  cli.py  models.py  progress.py  render.py  state.py  workflow.py  workflow_cli.py
src/doku/agents/: README.md
src/doku/agents/orchestrator/: config.toml  prompt.md
src/doku/agents/subagents/entrypoint_documenter/: config.toml  models.py  prompt.md
src/doku/agents/subagents/kafka_consumer_extractor/: config.toml  (+1 more)
src/doku/detectors/: __init__.py  java_spring.py
src/doku/workflows/document_codebase/: config.toml  finalize.py
tests/: test_agent.py  test_agent_cli.py  test_cli_env.py  test_cli_parsing.py  test_cli_render_outputs.py  test_detectors.py  test_progress.py  test_render.py  test_workflow.py
tests/fixtures/sample_spring_app/: BillingEndpoint.java  OrderController.java  OrderEventsConsumer.java  PaymentEventsConsumer.java
workflows/document_codebase/: config.toml  prompt.md
(+6 files in other folders)
