[project]
name = "doku"
version = "0.1.0"
description = "AI agent harness that documents a codebase's entrypoints (REST/SOAP APIs, Kafka consumers)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents[quickjs]>=0.6.12",
    "langchain-anthropic>=1.4.8",
    "langchain-openrouter>=0.2.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=13.7",
    "tree-sitter>=0.26.0",
    "tree-sitter-java>=0.23.5",
    "typer>=0.26.8",
]

[project.scripts]
doku = "doku.cli:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
